Code review, more documentation